@@ -38,6 +38,8 @@
  * fix parsing of the Keyspace and ColumnFamily names in numeric
    and string representations in CLI (CASSANDRA-3075)
  * always hint counters (CASSANDRA-3099)
+ * fix log4j initialization in EmbeddedCassandraService (CASSANDRA-2857)
+
 
 0.8.4
  * include files-to-be-streamed in StreamInSession.getSources (CASSANDRA-2972)
